--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>iPortfolio Bootstrap Template - Index</title>
+  <title>My Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -48,11 +48,8 @@
         <img src="assets/img/rahul.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Rahul Santhosh PM</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.instagram.com/rahul.santhosh._" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/rahulsanthoshpm" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -71,8 +68,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Rahul Santhosh PM</h1>
-      <p>I'm <span class="typed" data-typed-items="Electrical Engineer, Developer, Programmer, Photographer"></span></p>
+      <h1>Rahul Santhosh</h1>
+      <p>I'm <span class="typed" data-typed-items="Electrical & Electronics Engineer, Software Engineer, Active Safety Integration Engineer, Traveler, Photographer"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -82,19 +79,21 @@
     <section id="about" class="about">
       <div class="container">
 
-        <div class="section-title">
-          <h2>About</h2>
-          <p>Versatile and vibrant Electrical and Electronics Engineer experienced in E-Mobility Research & Product Development. Expertise in working on various EV/PHEV subsystems including BLDC motorcontrollers, Battery & Energy Management Systems, Charging Stations, E-Cycles, E-Scooters, Electric Car and has worked on Power Electronic Converters design and fabrication.</p>
-        </div>
+		<div class="section-title">
+		  <h2>About</h2>
+		  <p>
+			Active Safety Integration Engineer with a strong foundation in Electrical and Electronics Engineering and a deep passion for automotive technology and motorsport. I currently work at Magna International as a Software/Hardware Integration Engineer, developing next-gen ADAS/AD systems. I've had the privilege of contributing to projects for top OEMs including General Motors, Toyota, Subaru, and Stellantis. My background spans E-Mobility R&D, including BLDC motor controllers, Battery & Energy Management Systems, Charging Infrastructure, and Power Electronics for EVs and PHEVs. Outside of engineering, I’m a Formula 1 enthusiast and had the incredible opportunity to work with the F1 Media Team at the Singapore Grand Prix 2024 — blending my love for motorsport with my professional journey. I'm always eager to connect, collaborate, and innovate at the intersection of safety, performance, and sustainability in mobility.
+		  </p>
+		</div>
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
             <img src="assets/img/rahul.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Electric Mobility Enthusiast</h3>
+            <h3>Engineer at Magna International</h3>
             <p>
-              Electrical and Electronics Engineer experienced in E-Mobility Research & Product Development
+              Active Safety Integration Engineer with experience in ADAS/AD, E-Mobility R&D, and a passion for motorsport.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -102,21 +101,20 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>18 Sept 2000</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.rahulsanthoshpm.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 8943586900</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Calicut,Kerala,India</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Calicut, Kerala, India</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Undergraduate</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>25</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Graduate</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>rahulspmanjath@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
             </div>
             <p>
-              I am Pursuing Bachelor of Technology in Electrical & Electronics Engineering in Christ(Deemed To Be) University.I completed my higher secondary education from Silver Hills Higher Secondary School, Calicut, Kerala in the year 2018.
-Now I am studying for my Bachelor of Technology from Christ(Deemed To Be) University.
+              I hold a Bachelor of Technology degree in Electrical and Electronics Engineering from Christ (Deemed to be University), Bangalore. I completed my higher secondary education at Silver Hills Higher Secondary School, Calicut, Kerala, in 2018.
             </p>
           </div>
         </div>
@@ -189,7 +187,7 @@ Now I am studying for my Bachelor of Technology from Christ(Deemed To Be) Univer
             </div>
 
             <div class="progress">
-              <span class="skill">Industry Knowledge <i class="val">80%</i></span>
+              <span class="skill">Industry Knowledge <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -218,11 +216,6 @@ Now I am studying for my Bachelor of Technology from Christ(Deemed To Be) Univer
               <h4>Rahul Santhosh PM</h4>
               <p><em>I am Pursuing Bachelor of Technology in Electrical & Electronics Engineering and honours in vehicular technology in Christ(Deemed To Be) University.I completed my higher secondary education from Silver Hills Higher Secondary School, Calicut, Kerala in the year 2018.
 Now I am studying for my Bachelor of Technology from Christ(Deemed To Be) University.</em></p>
-              <ul>
-                <li>Bangalore,India</li>
-                <li>91 8943586900</li>
-                <li>rahulspmanjath@gmail.com</li>
-              </ul>
             </div>
 
             <h3 class="resume-title">Education</h3>
@@ -406,7 +399,7 @@ Now I am studying for my Bachelor of Technology from Christ(Deemed To Be) Univer
                 </p>
                 <img src="assets/img/testimonials/1.jpg" class="testimonial-img" alt="">
                 <h3>Steben Babu</h3>
-                <h4>Engineer</h4>
+                <h4>System Design Engineer</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -472,7 +465,7 @@ Now I am studying for my Bachelor of Technology from Christ(Deemed To Be) Univer
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Calicut,kerala</p>
+                <p>Calicut, Kerala, India.</p>
               </div>
 
               <div class="email">
