--- a/index.html
+++ b/index.html
@@ -121,26 +121,14 @@
 
       </div>
     </section><!-- End About Section -->
-<!-- ======= Facts Section ======= -->
-    <section id="facts" class="facts">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Facts</h2>
-          <p>Design, develop, and test electrical devices and equipment, including communications systems, power generators, motors and navigation systems, and electrical systems for automobiles and aircraft. Also oversee the manufacture of these devices, systems, and equipment.</p>
-        </div>
-
-       
-      </div>
-    </section><!-- End Facts Section -->
 
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
       <div class="container">
 
         <div class="section-title">
-          <h2>Skills</h2>
-          <p>Relevant technical knowledge and up-to-date sector knowledge,project management skills,the ability to multitask,commercial awareness,an analytical and problem-solving approach to work,oral and written communication skills to make technical information easy to understand for non-technical audiences.</p>
+          <h2>Skills & Expertise</h2>
+          <p>I specialize in active safety systems integration, with a strong foundation in embedded software development, hardware-software interfacing, and automotive electronics. My skill set includes sensor fusion, ECU configuration, signal processing, and system-level debugging for safety-critical applications. I’m experienced in real-time system validation, fault analysis, and ensuring seamless communication between various vehicle subsystems, including camera, radar, and LiDAR systems.</p>
         </div>
 
         <div class="row skills-content">
@@ -148,23 +136,23 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">Python <i class="val">75%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">MATHLAB <i class="val">70%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Analytical Skills <i class="val">80%</i></span>
+              <span class="skill">Technical Expertise <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Project Management <i class="val">90%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Analytical Skills <i class="val">90%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -187,9 +175,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Industry Knowledge <i class="val">100%</i></span>
+              <span class="skill">Industry Knowledge <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -206,7 +194,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Graduate student with Bachelor’s in Electrical and electronic engineering honours in vehicular technology, interested in the electric vehicular techology, Intern at E-Mobility R & D ,Christ University, Bangalore , excellent interpersonal, communication, and presentation skills.</p>
+          <p>Active Safety Integration Engineer with a Bachelor’s degree in Electrical and Electronics Engineering (Honours in Vehicular Technology) and hands-on experience at Magna International. Skilled in embedded software development, hardware-software interfacing, sensor fusion, ECU configuration, and system-level debugging for safety-critical automotive applications. Experienced in real-time system validation, fault analysis, and integration of advanced ADAS/AD systems for leading OEMs. Passionate about automotive technology, E-Mobility R&D, and delivering innovative solutions that enhance vehicle safety and performance.</p>
         </div>
 
         <div class="row">
@@ -214,8 +202,7 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Rahul Santhosh PM</h4>
-              <p><em>I am Pursuing Bachelor of Technology in Electrical & Electronics Engineering and honours in vehicular technology in Christ(Deemed To Be) University.I completed my higher secondary education from Silver Hills Higher Secondary School, Calicut, Kerala in the year 2018.
-Now I am studying for my Bachelor of Technology from Christ(Deemed To Be) University.</em></p>
+              <p><em>I hold a Bachelor of Technology in Electrical and Electronics Engineering with an Honours in Vehicular Technology from Christ (Deemed to be University). I completed my higher secondary education in 2018 from Silver Hills Higher Secondary School, Calicut, Kerala.Currently, I am working at Magna Automotive as a Software/Hardware Integration Engineer in the Active Safety Integration department, where I contribute to the development and integration of advanced automotive safety systems.</em></p>
             </div>
 
             <h3 class="resume-title">Education</h3>
@@ -223,20 +210,31 @@ Now I am studying for my Bachelor of Technology from Christ(Deemed To Be) Univer
               <h4>Bachelor of Technology,Electrical and Electronics Engineering</h4>
               <h5>2019 - 2023</h5>
               <p><em>Christ University, Bangalore</em></p>
-              <p>The goal of the programme is to create engineers of high technical skills in the Electrical & Electronics Engineering field suitable for employment in reputed firms and for higher studies. The programme caters to the ever increasing needs of technical brilliance in all areas of electrical and electronics engineering such as integrated Electronics and Circuits, Telecommunications, Control & Automation, Power Systems & Power Electronics.</p>
+              <p>Our programme is designed to develop highly skilled engineers in the field of Electrical & Electronics Engineering, preparing them for successful careers with leading companies as well as advanced studies. It addresses the growing demand for technical excellence across diverse domains, including Integrated Electronics and Circuits, Telecommunications, Control & Automation, Power Systems, and Power Electronics. Graduates emerge equipped with the knowledge and expertise to innovate and excel in today’s rapidly evolving technological landscape.</p>
             </div>
             <div class="resume-item">
               <h4>Higher secondary,Computer Science</h4>
               <h5>2016 - 2018</h5>
               <p><em>Silver Hills Higher Secondary School,India</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
+              <h4>Active Safety Integrating Engineer</h4>
+              <h5>2023 - Present</h5>
+              <p><em>Magna International, Bangalore </em></p>
+              <ul>
+                <li>Develop and integrate advanced Active Safety and ADAS/AD systems for leading OEMs including General Motors, Toyota, Subaru, and Stellantis.</li>
+                <li>Specialize in embedded software development, hardware-software interfacing, sensor fusion, ECU configuration, and system-level debugging for safety-critical automotive applications.</li>
+                <li>Perform real-time system validation, fault analysis, and ensure seamless communication across vehicle subsystems including camera, radar, and LiDAR sensors.</li>
+                <li>Collaborate cross-functionally with hardware and software teams to enhance vehicle safety, performance, and reliability.</li>
+				<li>Contribute to the design and testing of next-generation automotive safety technologies aligned with industry standards and customer requirements.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
               <h4>E-Mobility R & D Intern</h4>
-              <h5>2021 - Present</h5>
+              <h5>2021 - 2023</h5>
               <p><em>Christ University, Bangalore </em></p>
               <ul>
                 <li>E- Mobility Research and Development Facility is a CSR initiative of Safran Engineering Services and IEEE. The Facility aims at providing the following avenues with regards to improved charging infrastructure, Smart Electric Drive systems, IoT technologies for EVs and improved Power System Dynamics.</li>
@@ -245,16 +243,7 @@ Now I am studying for my Bachelor of Technology from Christ(Deemed To Be) Univer
                 <li>IoT Based Smart Assist Technology and Autonomous Vehicles.</li>
               </ul>
             </div>
-            <div class="resume-item">
-              <h4>Volunteer experience</h4>
-              <h5>2016 - 2018</h5>
-              <p><em>National Service Scheme</em></p>
-              <ul>
-                <li>National Service Scheme (NSS) is a permanent youth programme under the Ministry of Youth Affairs and Sports, Government of India and funded by Government of Tamil Nadu and Government of India</li>
-                <li>The motto of NSS is “NOT ME BUT YOU“. It underlines that the welfare of an individual is ultimately dependent on the welfare of the society as a whole.</li>
-                <li>This expresses the essence of democratic living and upholds the need of selfless service and appreciation of the other man’s point of view and also consideration for fellow human beings.</li>
-              </ul>
-            </div>
+
           </div>
         </div>
 
@@ -267,7 +256,7 @@ Now I am studying for my Bachelor of Technology from Christ(Deemed To Be) Univer
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Versatile and vibrant Electrical and Electronics Engineer experienced in E-Mobility Research & Product Development. Expertise in working on various EV/PHEV subsystems including BLDC motorcontrollers, Battery & Energy Management Systems, Charging Stations, E-Cycles, E-Scooters, Electric Car and has worked on Power Electronic Converters design and fabrication.</p>
+          <p>I specialize in active safety systems integration, focusing on embedded software development and seamless hardware-software interfacing within automotive electronics. My expertise spans sensor fusion, ECU configuration, signal processing, and system-level debugging for safety-critical applications. I have hands-on experience validating real-time systems and performing in-depth fault analysis to ensure reliable communication across vehicle subsystems—including camera, radar, and LiDAR. My work contributes to advancing the safety and intelligence of modern automotive platforms.</p>
         </div>
 
         <div class="row" data-aos="fade-up">
@@ -384,7 +373,7 @@ Now I am studying for my Bachelor of Technology from Christ(Deemed To Be) Univer
 
         <div class="section-title">
           <h2>Testimonials</h2>
-          <p>During my four years of bachelor studies, I have gained the knowledge and skills that will help me develop my future career as an engineer. I am thankful to all the passionate teachers who were kind and well prepared for sharing their wisdom and experience with us.</p>
+          <p>Here’s what colleagues and collaborators say about working with me: I’m known for my dedication, strong technical skills, and ability to multitask effectively under pressure. Clients and team members appreciate my problem-solving mindset, coding expertise, and commitment to delivering high-quality results. Their positive feedback reflects my passion for continuous learning and my collaborative approach to engineering challenges.</p>
         </div>
 
         <div class="testimonials-slider swiper-container" data-aos="fade-up" data-aos-delay="100">
@@ -454,8 +443,8 @@ Now I am studying for my Bachelor of Technology from Christ(Deemed To Be) Univer
       <div class="container">
 
         <div class="section-title">
-          <h2>Contact</h2>
-          <p>A person who designs and builds machinery or technical equipment, a person who studies or works in a branch of engineering an electrical engineer.</p>
+          <h2>Get in Touch</h2>
+          <p>I’m always excited to connect with fellow professionals, collaborators, and enthusiasts in the fields of automotive technology, electrical engineering, and mobility innovation. Whether you have a project idea, a potential opportunity, or simply want to chat about the latest advancements in active safety systems and E-Mobility, feel free to reach out. Let’s work together to drive the future of engineering and technology forward.</p>
         </div>
 
         <div class="row" data-aos="fade-in">
